Optimizing code readability and manipulation